--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <link rel="stylesheet" href="./styles/chamber-site-plan-base.css" />
-    <link rel="stylesheet" href="./styles/chamber-site-plan-large.css" />
-    <title>Chamber Site</title>
+    >
+    <link rel="stylesheet" href="./styles/chamber-site-plan-base.css">
+    <link rel="stylesheet" href="./styles/chamber-site-plan-large.css">
+    <title>Chamber Site Plan</title>
+    <meta name="description" content="Site plan for chamber site">
+    <meta name="author" content="Diego Granados">
   </head>
   <body>
     <header id="main-header">
@@ -54,25 +56,25 @@
       <section>
         <h2>Color Schema</h2>
         <div class="color-card-container">
-          <div class="color-card" style="background-color: #04364A;">
+          <div class="color-card" style="background-color: #04364a">
             <div class="color-card-body">
               <h4>#04364A</h4>
               <h4>rgb(4, 54, 74)</h4>
             </div>
           </div>
-          <div class="color-card" style="background-color: #176B87;">
+          <div class="color-card" style="background-color: #176b87">
             <div class="color-card-body">
               <h4>#176B87</h4>
               <h4>rgb(23, 107, 135)</h4>
             </div>
           </div>
-          <div class="color-card" style="background-color: #64CCC5;">
+          <div class="color-card" style="background-color: #64ccc5">
             <div class="color-card-body">
               <h4>#64CCC5</h4>
               <h4>rgb(100, 204, 197)</h4>
             </div>
           </div>
-          <div class="color-card" style="background-color: #DAFFFB;">
+          <div class="color-card" style="background-color: #dafffb">
             <div class="color-card-body">
               <h4>#DAFFFB</h4>
               <h4>rgb(218, 255, 251)</h4>
@@ -94,7 +96,7 @@
       <section id="wireframe-section">
         <h2>Wireframe</h2>
         <div>
-          <img src="./images/Wireframe - 1.png" alt="" />
+          <img src="./images/Wireframe - 1.png" alt="Wireframe">
         </div>
       </section>
     </main>
