--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -9,7 +9,7 @@
     >
     <link rel="stylesheet" href="./styles/chamber-site-plan-base.css">
     <link rel="stylesheet" href="./styles/chamber-site-plan-large.css">
-    <title>Chamber Site Plan</title>
+    <title>Site Plan for chamber site</title>
     <meta name="description" content="Site plan for chamber site">
     <meta name="author" content="Diego Granados">
   </head>
