--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -96,7 +96,7 @@
       <section id="wireframe-section">
         <h2>Wireframe</h2>
         <div>
-          <img src="./images/Wireframe - 1.png" alt="Wireframe">
+          <img src="./images/wireframe.png" alt="Wireframe">
         </div>
       </section>
     </main>
