--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Learning Activities</h2>
       </div>
       <ul>
-        <li>Week 01: <a href="#">Holygrail</a></li>
+        <li>Week 01: <a href="./week01/holygrail.html">Layout</a> | <a href="https://codepen.io/diegog-ux10/pen/bGJPVgx">CodePen | <a href="./week01//media-query.html">Queries</a></a></li>
         <li>Week 02: <a href="#"></a></li>
         <li>Week 03: <a href="#"></a></li>
         <li>Week 04: <a href="#"></a></li>
