--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diego Granados - WDD 230 - Web Frontend Development</title>
@@ -31,8 +32,10 @@
         <h2>Learning Activities</h2>
       </div>
       <ul>
-        <li>Week 01: <a href="./week01/holygrail.html">Layout</a> | <a href="https://codepen.io/diegog-ux10/pen/bGJPVgx">CodePen | <a href="./week01//media-query.html">Queries</a></a></li>
-        <li>Week 02: <a href="#"></a></li>
+        <li>Week 01: <a href="./week01/holygrail.html">Layout</a> | <a
+            href="https://codepen.io/diegog-ux10/pen/bGJPVgx">CodePen | <a
+              href="./week01//media-query.html">Queries</a></a></li>
+        <li>Week 02: <a href="./week02/design.html">Design Principles</a></li>
         <li>Week 03: <a href="#"></a></li>
         <li>Week 04: <a href="#"></a></li>
         <li>Week 05: <a href="#"></a></li>
