--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diego Granados - WDD 230 - Web Frontend Development</title>
+  <meta property="og:title" content="WDD 230 - Web Frontend Development">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://diegog-ux10.github.io/wdd230/">
+  <meta property="og:image"
+    content="https://images.unsplash.com/photo-1576471721322-443777eed875?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1632&q=80">
   <meta name="description" content="WDD 230 - Web Frontend Development - Diego Granados - Course assignment portal">
   <meta name="author" content="Diego Granados">
   <link rel="preconnect" href="https://fonts.googleapis.com">
