--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li>Week 01: <a href="./week01/holygrail.html">Layout</a> | <a
             href="https://codepen.io/diegog-ux10/pen/bGJPVgx">CodePen | <a
               href="./week01//media-query.html">Queries</a></a></li>
-        <li>Week 02: <a href="./week02/design.html">Design Principles</a></li>
+        <li>Week 02: <a href="./week02/design.html">Design Principles</a> | <a href="https://codepen.io/diegog-ux10/pen/xxeoEwX">CodePen</a></li>
         <li>Week 03: <a href="#"></a></li>
         <li>Week 04: <a href="#"></a></li>
         <li>Week 05: <a href="#"></a></li>
