CSS Normalize and Reset

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="./styles/base.css">
   <link rel="stylesheet" href="./styles/larger.css">
 </head>
@@ -40,7 +41,8 @@
         <li>Week 01: <a href="./week01/holygrail.html">Layout</a> | <a
             href="https://codepen.io/diegog-ux10/pen/bGJPVgx">CodePen | <a
               href="./week01//media-query.html">Queries</a></a></li>
-        <li>Week 02: <a href="./week02/design.html">Design Principles</a> | <a href="https://codepen.io/diegog-ux10/pen/xxeoEwX">CodePen</a></li>
+        <li>Week 02: <a href="./week02/design.html">Design Principles</a> | <a
+            href="https://codepen.io/diegog-ux10/pen/xxeoEwX">CodePen</a> | <a href="./week02/bom.html">DOM</a></li>
         <li>Week 03: <a href="#"></a></li>
         <li>Week 04: <a href="#"></a></li>
         <li>Week 05: <a href="#"></a></li>
