--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sta. Teresa Chamber of Commerce</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/larger.css">
@@ -45,7 +50,7 @@
             <a href="#" class="btn-primary">Register to be member</a>
         </div>
         <!-- Three Options Section -->
-        <section class="flex-col options-sec pd-sm">
+        <div class="flex-col options-sec pd-sm">
             <div class="flex justify-center  options-sec_cards-container">
                 <!-- Cards -->
                 <div class="card-nav">
@@ -65,7 +70,7 @@
                     facilis consequatur recusandae harum alias suscipit, velit nostrum fugit laudantium neque corporis.
                     Ipsa quam maiores impedit.</p>
             </div>
-        </section>
+        </div>
         <!-- Current Events -->
         <section class="flex-col pd-sm event-sec">
             <h2>Events</h2>
@@ -101,6 +106,7 @@
         </section>
         <!-- Weather Card -->
         <section>
+            <h2>Weather</h2>
             <p>Weather|</p>
         </section>
     </main>
