--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               href="./week01//media-query.html">Queries</a></a></li>
         <li>Week 02: <a href="./week02/design.html">Design Principles</a> | <a
             href="https://codepen.io/diegog-ux10/pen/xxeoEwX">CodePen</a> | <a href="./week02/bom.html">DOM</a></li>
-        <li>Week 03: <a href="#"></a></li>
+        <li>Week 03: <a href="week03/images/landscape.webp">WebP</a></li>
         <li>Week 04: <a href="#"></a></li>
         <li>Week 05: <a href="#"></a></li>
         <li>Week 06: <a href="#"></a></li>
