--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
               href="./week01//media-query.html">Queries</a></a></li>
         <li>Week 02: <a href="./week02/design.html">Design Principles</a> | <a
             href="https://codepen.io/diegog-ux10/pen/xxeoEwX">CodePen</a> | <a href="./week02/bom.html">DOM</a></li>
-        <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="./week03/lazyload.html">lazyload</a></li>
-        <li>Week 04: <a href="#"></a></li>
-        <li>Week 05: <a href="#"></a></li>
-        <li>Week 06: <a href="#"></a></li>
+        <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="./week03/lazyload.html">lazyload</a> |
+          <a href="./week03/responsive-images.html">Srcset</a></li>
       </ul>
     </section>
     <section class="card">
