--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li>Week 02: <a href="./week02/design.html">Design Principles</a> | <a
             href="https://codepen.io/diegog-ux10/pen/xxeoEwX">CodePen</a> | <a href="./week02/bom.html">DOM</a></li>
         <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="./week03/lazyload.html">lazyload</a> |
-          <a href="./week03/responsive-images.html">Srcset</a></li>
+          <a href="./week03/responsive-images.html">Srcset</a> | <a href="./week03/bom.html">BOM 2</a></li>
       </ul>
     </section>
     <section class="card">
