--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header>
         <!-- Top Header -->
-        <div class="bg-primary pd-sm flex justify-btw">
+        <div class="bg-primary pd-sm flex justify-btw top-header">
             <div>
                 <a href="">Register</a>
                 <a href="">Login</a>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <!-- Bottom Header -->
-        <nav class="bg-secondary pd-sm" id="main-nav">
+        <nav class="bg-secondary pd-sm bottom-header" id="main-nav">
             <ul>
                 <li><a href="">Link 1</a></li>
                 <li><a href="">Link 2</a></li>
@@ -76,9 +76,9 @@
             <h2>Events</h2>
             <!-- Event 01 Card -->
             <div class="event-card">
-                <figure>
-                    <img src="./images/images.png" alt="">
-                </figure>
+                <picture>
+                    <img src="//via.placeholder.com/400x200/" alt="">
+                </picture>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, ullam.</p>
                     <button>View Event</button>
@@ -86,9 +86,9 @@
             </div>
             <!-- Event 02 Card -->
             <div class="event-card">
-                <figure>
-                    <img src="./images/images.png" alt="">
-                </figure>
+                <picture>
+                    <img src="//via.placeholder.com/400x200/" alt="">
+                </picture>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem debitis totam dicta,
                         consequatur cumque dolor?</p>
@@ -99,9 +99,9 @@
         <section class="sponsors-sec pd-sm">
             <h2>Sponsors</h2>
             <div>
-                <div class="sponsor-card"><img src="./images/images.png" alt=""></div>
-                <div class="sponsor-card"><img src="./images/images.png" alt=""></div>
-                <div class="sponsor-card"><img src="./images/images.png" alt=""></div>
+                <div class="sponsor-card"><img src="//via.placeholder.com/200x100/" alt=""></div>
+                <div class="sponsor-card"><img src="//via.placeholder.com/200x100/" alt=""></div>
+                <div class="sponsor-card"><img src="//via.placeholder.com/200x100/" alt=""></div>
             </div>
         </section>
         <!-- Weather Card -->
@@ -111,7 +111,7 @@
         </section>
     </main>
     <footer class="bg-primary pd-sm flex-col">
-        <p>Developed by Your Full Name</p>
+        <p>Developed by Your Diego Granados</p>
         <p>WDD 230 Project</p>
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
