W04: Team Activity - Form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="">Home</a>
     <a href="">Chamber</a>
     <a href="">Site Plan</a>
-    <a href="">Form</a>
+    <a href="./form.html">Form</a>
   </nav>
   <main>
     <div class="hero-img">
@@ -55,6 +55,7 @@
         <li>Week 03: <a href="week03/images/landscape.webp">WebP</a> | <a href="./week03/lazyload.html">lazyload</a> |
           <a href="./week03/responsive-images.html">Srcset</a> | <a href="./week03/bom.html">BOM 2</a>
         </li>
+        <li>Week 04: <a href="https://codepen.io/diegog-ux10/pen/qBGbLaJ" target="_blank">CodePen</a> | <a href="./images/Screenshot_23.png" target="_blank">Combinators</a> | <a href="./week04/tablebuild.html">Table</a></li>
       </ul>
     </section>
     <section class="card-02">
