fixing chamber site

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -111,7 +111,7 @@
         </section>
     </main>
     <footer class="bg-primary pd-sm flex-col">
-        <p>Developed by Your Diego Granados</p>
+        <p><span id="year"></span> Developed by Your Diego Granados</p>
         <p>WDD 230 Project</p>
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
