--- a/chamber/form.html
+++ b/chamber/form.html
@@ -44,64 +44,67 @@
         </nav>
     </header>
     <main>
-        <form method="get" action="thankyou.html" id="membershipForm">
-            <fieldset>
-                <legend>Membership Application Form</legend>
+        <div class="form-container">
 
-                <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" name="firstName" required>
+            <form method="get" action="thankyou.html" id="membershipForm">
+                <fieldset>
+                    <legend>Membership Application Form</legend>
 
-                <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" name="lastName" required>
+                    <label for="firstName">First Name:</label>
+                    <input type="text" id="firstName" name="firstName" required>
 
-                <label for="position">Title/Position:</label>
-                <input type="text" id="position" name="position" pattern="[A-Za-z\s\-]{7,}"
-                    title="Only alpha characters, hyphens, and spaces. Minimum 7 characters.">
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" id="lastName" name="lastName" required>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required placeholder="example@domain.com">
+                    <label for="position">Title/Position:</label>
+                    <input type="text" id="position" name="position" pattern="[A-Za-z\s\-]{7,}"
+                        title="Only alpha characters, hyphens, and spaces. Minimum 7 characters.">
 
-                <label for="phone">Mobile Phone:</label>
-                <input type="tel" id="phone" name="phone" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required placeholder="example@domain.com">
 
-                <label for="organization">Organization Name:</label>
-                <input type="text" id="organization" name="organization" required>
+                    <label for="phone">Mobile Phone:</label>
+                    <input type="tel" id="phone" name="phone" required>
 
-                <label for="membership">Membership Level:</label>
-                <select id="membership" name="membership">
-                    <option value="np">NP Membership (Non-profit, No fee)</option>
-                    <option value="bronze">Bronze Membership</option>
-                    <option value="silver">Silver Membership</option>
-                    <option value="gold">Gold Membership</option>
-                </select>
+                    <label for="organization">Organization Name:</label>
+                    <input type="text" id="organization" name="organization" required>
 
-                <label for="description">Organization Description:</label>
-                <textarea id="description" name="description"></textarea>
+                    <label for="membership">Membership Level:</label>
+                    <select id="membership" name="membership">
+                        <option value="np">NP Membership (Non-profit, No fee)</option>
+                        <option value="bronze">Bronze Membership</option>
+                        <option value="silver">Silver Membership</option>
+                        <option value="gold">Gold Membership</option>
+                    </select>
 
-                <input type="hidden" id="timestamp" name="timestamp" value="">
+                    <label for="description">Organization Description:</label>
+                    <textarea id="description" name="description"></textarea>
 
-                <input type="submit" value="Apply to Membership">
-            </fieldset>
-        </form>
+                    <input type="hidden" id="timestamp" name="timestamp" value="">
 
-        <aside>
-            <h2>Membership Benefits</h2>
-            <ul>
-                <li>NP Membership: Access to special events and basic training.</li>
-                <li>Bronze Membership: NP benefits + enhanced advertising.</li>
-                <li>Silver Membership: Bronze benefits + priority support and additional discounts.</li>
-                <li>Gold Membership: Silver benefits + premium event access and spotlight advertising.</li>
-            </ul>
-        </aside>
+                    <input type="submit" value="Apply to Membership">
+                </fieldset>
+            </form>
+
+            <aside>
+                <h2>Membership Benefits</h2>
+                <ul>
+                    <li>NP Membership: Access to special events and basic training.</li>
+                    <li>Bronze Membership: NP benefits + enhanced advertising.</li>
+                    <li>Silver Membership: Bronze benefits + priority support and additional discounts.</li>
+                    <li>Gold Membership: Silver benefits + premium event access and spotlight advertising.</li>
+                </ul>
+            </aside>
+        </div>
     </main>
     <footer class="bg-primary pd-sm flex-col">
-        <p>Developed by Your Diego Granados</p>
+        <p><span id="year"></span> Developed by Your Diego Granados</p>
         <p>WDD 230 Project</p>
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
     <script>
         // Set the timestamp value to the current date and time when the page loads
         document.getElementById('timestamp').value = new Date().toISOString();
-      </script>
+    </script>
 </body>
 </html>
