updated chamber site layout

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header>
         <!-- Top Header -->
-        <div class="bg-primary pd-sm flex justify-btw">
+        <div class="bg-primary pd-sm flex justify-btw top-header">
             <div>
                 <a href="">Register</a>
                 <a href="">Login</a>
@@ -35,11 +35,11 @@
             </div>
         </div>
         <!-- Bottom Header -->
-        <nav class="bg-secondary pd-sm" id="main-nav">
+        <nav class="bg-secondary pd-sm bottom-header" id="main-nav">
             <ul>
-                <li><a href="">Link 1</a></li>
-                <li><a href="">Link 2</a></li>
-                <li><a href="">Link 3</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./form.html">Apply  to Membership</a></li>
+                <li><a href="">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -93,22 +93,22 @@
         </div>
         <div class="main-content">
             <picture>
-                <img src="https://source.unsplash.com/random/400x600?city" alt="Image caption" loading="lazy" />
+                <img src="https://source.unsplash.com/random/400x600?city" alt="caption" loading="lazy" />
             </picture>
             <picture>
-                <img src="https://source.unsplash.com/random/400x600?city" alt="Image caption" loading="lazy" />
+                <img src="https://source.unsplash.com/random/400x600?city" alt="caption" loading="lazy" />
             </picture>
             <picture>
-                <img src="https://source.unsplash.com/random/400x600?city" alt="Image caption" loading="lazy" />
+                <img src="https://source.unsplash.com/random/400x600?city" alt="caption" loading="lazy" />
             </picture>
             <picture>
-                <img src="https://source.unsplash.com/random/400x600?city" alt="Image caption" loading="lazy" />
+                <img src="https://source.unsplash.com/random/400x600?city" alt="caption" loading="lazy" />
             </picture>
             <picture>
-                <img src="https://source.unsplash.com/random/400x600?city" alt="Image caption" loading="lazy" />
+                <img src="https://source.unsplash.com/random/400x600?city" alt="caption" loading="lazy" />
             </picture>
             <picture>
-                <img src="https://source.unsplash.com/random/400x600?city" alt="Image caption" loading="lazy" />
+                <img src="https://source.unsplash.com/random/400x600?city" alt="caption" loading="lazy" />
             </picture>
         </div>
     </div>
