--- a/chamber/form.html
+++ b/chamber/form.html
@@ -37,9 +37,9 @@
         <!-- Bottom Header -->
         <nav class="bg-secondary pd-sm bottom-header" id="main-nav">
             <ul>
-                <li><a href="">Link 1</a></li>
-                <li><a href="">Link 2</a></li>
-                <li><a href="">Link 3</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="">Apply Membership</a></li>
+                <li><a href="./discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -88,12 +88,89 @@
 
             <aside>
                 <h2>Membership Benefits</h2>
-                <ul>
-                    <li>NP Membership: Access to special events and basic training.</li>
-                    <li>Bronze Membership: NP benefits + enhanced advertising.</li>
-                    <li>Silver Membership: Bronze benefits + priority support and additional discounts.</li>
-                    <li>Gold Membership: Silver benefits + premium event access and spotlight advertising.</li>
-                </ul>
+                <div>
+                    <div class="card card--plan card--selected">
+                        <div class="card__content">
+                            <div class="card__title">
+                                NP Membership (Non-profit, No fee)
+                            </div>
+                            <div class="card__price">
+                                0
+                            </div>
+                            <div class="card__sub-title">
+                                per month (billed yearly)
+                            </div>
+                            <ul class="card__list">
+                                <li class="card__list__item">
+                                     Access to special events and basic training
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card card--plan card--selected">
+                        <div class="card__content">
+                            <div class="card__title">
+                                Bronze Membership
+                            </div>
+                            <div class="card__price">
+                                50
+                            </div>
+                            <div class="card__sub-title">
+                                per month (billed yearly)
+                            </div>
+                            <ul class="card__list">
+                                <li class="card__list__item">
+                                    NP benefits
+                                </li>
+                                <li class="card__list__item">
+                                    Enhanced advertising.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card card--plan card--selected">
+                        <div class="card__content">
+                            <div class="card__title">
+                                Silver Membership
+                            </div>
+                            <div class="card__price">
+                                100
+                            </div>
+                            <div class="card__sub-title">
+                                per month (billed yearly)
+                            </div>
+                            <ul class="card__list">
+                                <li class="card__list__item">
+                                    Bronze benefits
+                                </li>
+                                <li class="card__list__item">
+                                    Priority support and additional discounts.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card card--plan card--selected">
+                        <div class="card__content">
+                            <div class="card__title">
+                                Gold Membership
+                            </div>
+                            <div class="card__price">
+                                125
+                            </div>
+                            <div class="card__sub-title">
+                                per month (billed yearly)
+                            </div>
+                            <ul class="card__list">
+                                <li class="card__list__item">
+                                    Silver benefits
+                                </li>
+                                <li class="card__list__item">
+                                    Premium event access and spotlight advertising.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </aside>
         </div>
     </main>
