--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <a href="./week03/responsive-images.html">Srcset</a> | <a href="./week03/bom.html">BOM 2</a>
         </li>
         <li>Week 04: <a href="https://codepen.io/diegog-ux10/pen/qBGbLaJ" target="_blank">CodePen</a> | <a href="./images/Screenshot_23.png" target="_blank">Combinators</a> | <a href="./week04/tablebuild.html">Table</a></li>
+        <li>Week 05: <a href="https://codepen.io/diegog-ux10/pen/PovzVKz" target="_blank">CodePen</a> | <a href="./week05/new-ward-members.json">JSON</a></li>
       </ul>
     </section>
     <section class="card-02">
