--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
                 <input type="password" id="confirmPassword" name="confirmPassword" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required pattern="[a-zA-Z0-9._%+-]+@byui\.edu$"
+                <input type="email" id="email" name="email" required pattern="[a-zA-Z0-9._%+\-]+@byui\.edu$"
                     title="Please enter a valid email address from the byui.edu domain.">
 
                 <label for="rating">Page Rating: <span id="ratingValue">5</span></label>
@@ -60,6 +60,6 @@
                     src="./images/venezuela-flag.png" alt="venezuela-flag" width="20"></span></p>
         <p><span>Last Modifitaction:</span><span id="lastModified"></span></p>
     </footer>
-    <script src="/scripts/form.js"></script>
+    <script src="./scripts/form.js"></script>
 </body>
 </html>
