--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,9 @@
     <link rel="icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sta. Teresa Chamber of Commerce</title>
+    <title>Sta. Teresa Chamber of Commerce - Join Page</title>
+    <meta name="description" content="Join pages for Santa Teresa Chamber Site">
+    <meta name="author" content="Diego Granados">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -45,7 +47,6 @@
     </header>
     <main>
         <div class="form-container">
-
             <form method="get" action="thankyou.html" id="membershipForm">
                 <fieldset>
                     <legend>Membership Application Form</legend>
