--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,7 @@
                 <img src="./images/logo.jpg" alt="" width="200" />
             </a>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./join.html">Apply Membership</a></li>
                 <li><a href="./discover.html">Discover</a></li>
             </ul>
